--- a/mysite/app/views/layouts/application.html.erb
+++ b/mysite/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Billy's first bootstrap+RoR site</title>
+  <title>Billy's first bootstrap site integrated with rails</title>
   <%= stylesheet_link_tag    'test.css', media: 'all', 'data-turbolinks-track' => true %>
   <%= stylesheet_link_tag    'bootstrap.min', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
