--- a/mysite/app/views/welcome/test.html.erb
+++ b/mysite/app/views/welcome/test.html.erb
@@ -13,13 +13,17 @@
   <title>Billy's first bootstrap site integrated with rails</title>
 
   <!-- Bootstrap Core CSS -->
-  <link href="test" rel="stylesheet">
+  <%= stylesheet_link_tag 'test.css' %>
+  <%= stylesheet_link_tag 'bootstrap.min.css' %>
+  <%= stylesheet_link_tag 'font-awesome.min.css' %>
+
+  <!--<link href="/assets/bootstrap.min.css" rel="stylesheet">-->
 
   <!-- Custom CSS -->
-  <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+  <!--<link href="https://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">-->
 
   <!-- Custom Fonts -->
-  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <!--<link href="/assets/font-awesome.min.css" rel="stylesheet" type="text/css">-->
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
@@ -68,8 +72,8 @@
       </ul>
     </div>
     <!-- /.navbar-collapse -->
-  </div>
   <!-- /.container-fluid -->
+  </div>
 </nav>
 
 <!-- Header -->
@@ -162,35 +166,44 @@
     </div>
     <div class="row">
       <div class="col-lg-12">
-        <form name="sentMessage" id="contactForm" novalidate>
+        <%= form_for :field, :url => {:action => 'create'} do |f| %>
           <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6" >
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">
+                <%= f.label :name, "Your Name" %>
+                <%= f.text_field :name, :class => 'form-control' %>
+                <!--<input type="text" class="form-control" placeholder="Your Name *" id="name" required data-validation-required-message="Please enter your name.">-->
                 <p class="help-block text-danger"></p>
               </div>
               <div class="form-group">
-                <input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">
+                <%= f.label :email %>
+                <%= f.text_field :email, :class => 'form-control' %>
+                <!--<input type="email" class="form-control" placeholder="Your Email *" id="email" required data-validation-required-message="Please enter your email address.">-->
                 <p class="help-block text-danger"></p>
               </div>
               <div class="form-group">
-                <input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">
+                <%= f.label :phone %>
+                <%= f.text_field :phone, :class => 'form-control' %>
+                <!--<input type="tel" class="form-control" placeholder="Your Phone *" id="phone" required data-validation-required-message="Please enter your phone number.">-->
                 <p class="help-block text-danger"></p>
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>
+                <%= f.label :msg %>
+                <%= f.text_area :msg, :class => 'form-control' %>
+                <!--<textarea class="form-control" placeholder="Your Message *" id="message" required data-validation-required-message="Please enter a message."></textarea>-->
                 <p class="help-block text-danger"></p>
               </div>
             </div>
             <div class="clearfix"></div>
             <div class="col-lg-12 text-center">
               <div id="success"></div>
-              <button type="submit" class="btn btn-xl">Send Message</button>
+              <%= f.submit 'Send Message', :class => 'btn btn-xl' %>
+              <!--<button type="submit" class="btn btn-xl">Send Message</button>-->
             </div>
           </div>
-        </form>
+        <% end %>
       </div>
     </div>
   </div>
@@ -229,6 +242,7 @@
 <%= javascript_include_tag 'jquery' %>
 
 <!-- Bootstrap Core JavaScript -->
+<%= javascript_include_tag 'bootstrap.min.js' %>
 <%= javascript_include_tag 'http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js' %>
 
 <!-- Plugin JavaScript -->
